[package]
name = "diamond-diary"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "diamond_diary_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["fs-all"] } # fs-all se sab FS permissions milenge
serde = { version = "1", features = ["derive"] }
serde_json = "1"
